fixing spacing in timeline page

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -2,4 +2,5 @@
   padding: 4rem 0;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
