--- a/app/assets/stylesheets/components/_timeline.scss
+++ b/app/assets/stylesheets/components/_timeline.scss
@@ -11,8 +11,8 @@ a {
 
 .results-heading {
   position: absolute;
-  left: -66px;
-  top: -79px;
+  top: 0;
+  left: 0;
   font-size: 35px;
   color: white;
   opacity: 0.6;
@@ -177,7 +177,7 @@ Main Components
 }
 @media only screen and (min-width: 1100px) {
   .cd-horizontal-timeline {
-    margin: 6em auto;
+    margin: 6em 0 0 0;
   }
   .cd-horizontal-timeline::before {
     /* never visible - this is used in jQuery to check the current MQ */
@@ -307,7 +307,7 @@ Main Components
 .cd-horizontal-timeline .events-content {
   position: relative;
   width: 100%;
-  margin: 2em 0;
+  margin: 2em 0 0 0;
   overflow: hidden;
   -webkit-transition: height 0.4s;
   -moz-transition: height 0.4s;
